# CMake

./: .gitattributes  README.md
AddLibrary/: CMakeLists.txt
AddLibrary/src/: CMakeLists.txt  hello.cpp  hello.h
BasicStartingPoint/: CMakeLists.txt
BetterHelloWorld/: CMakeLists.txt  README.md
BetterHelloWorld/doc/: hello.txt
BetterHelloWorld/src/: CMakeLists.txt  main.cpp
Boost/: CMakeLists.txt
Boost/src/: CMakeLists.txt  main.cpp
CreateFindPackage/: CMakeLists.txt
CreateFindPackage/cmake/: FindHELLO.cmake
CreateFindPackage/src/: CMakeLists.txt  main.c
FindModule/: FindCERNROOT.cmake  FindCERNROOT.cmake.backup
FindPackage/: CMakeLists.txt
FindPackage/src/: CMakeLists.txt  main.c
HelloWorld/: CMakeLists.txt
OpenCV/src/: main.cpp
Qt/: CMakeLists.txt  COPYRIGHT  INSTALL  README.md
Qt/include/: mainwindow.h
Qt/src/: CMakeLists.txt  mainwindow.cpp
Qt/ui/: mainwindow.ui
QtROOTOpenCV/: CMakeLists.txt
QtROOTOpenCV/src/: CMakeLists.txt  form.cpp  form.h  main.cpp  mainwindow.cpp  mainwindow.h
ROOT/: CMakeLists.txt
ROOT/include/: AMPT.h
ROOT/src/: AMPT.cpp  CMakeLists.txt  main.cpp
UseLibrary/: CMakeLists.txt
UseLibrary/src/: CMakeLists.txt  main.cpp
cmake-templates/qt5-project/: CMakeLists.txt
